<resources>
    <string name="app_name">It\'s Pomodoro Time!</string>
    <string name="start">start</string>
    <string name="restart">Restart</string>
    <string name="_00_00">25:00</string>
    <string name="pause">pause</string>
    <string name="settings">Settings:</string>
    <string name="exercise_time">Exercise time:</string>
    <string name="amount_of_exercises">Amount of exercises:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="example_time">00:00</string>
    <string name="ex_num_1">1</string>
    <string name="ex_num_2">2</string>
    <string name="ex_num_3">3</string>
    <string name="btn_settings">Settings</string>
    <string name="time_end">You did it!</string>
    <string name="time_end_message">It\'s time to relax a bit.</string>
    <string name="ok">OK</string>
    <string name="time_end_not_all_excercises">You almost completed your task!</string>
    <string name="default_minutes">25</string>
    <string name="default_seconds">00</string>
    <string name="reset">Reset</string>
</resources>